test/modules/cassella/ambigmodmain.unnested.compopts
                  # ambigmodmain.unnested.good
--main-module M   # ambigmodmain.unnested.M.good
--main-module X.M # ambigmodmain.unnested.X.good
